# ntics-compression

./: .gitignore  CMakeLists.txt  CMakePresets.json  CSVRow.h  CodecConfigCreator.h  DICOM2CIMG.h  FileMetadata.h  README.md  ResultSheetCreator.h  lossless.cfg264e  main.cpp
tools/AVC/: ldecod  lencod  lossless.dcfg264e  run.sh
tools/HEVC/: TAppDecoder  TAppEncoder  run.sh
tools/JP3D/: run.sh
tools/VVC/: DecoderApp  run.sh
tools/misc/: gatherResults.sh
